--- a/.gitignore
+++ b/.gitignore
@@ -269,3 +269,5 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,linux,windows,macos
 *.pkl
 *.json
+# Ignore dynaconf secret files
+.secrets.*
