--- a/compose.yml
+++ b/compose.yml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - ./model.json:/app/model.json:ro
+      - ./spot_model.json:/app/model.json:ro
       - ./analysis.csv:/app/analysis.csv:rw
       - ./.secrets.toml:/e4efs/config/.secrets.toml:ro
       - ./settings.toml:/e4efs/config/settings.toml:ro
